style: adjust text alignment for order content while preserving original layout

--- a/public/tour-screener.html
+++ b/public/tour-screener.html
@@ -672,10 +672,10 @@
         .new_t-order-btn {
             display: none !important;
         }
+        /* Keep original table-cell layout — only override text alignment */
         .new_t-order-content {
             text-align: center !important;
-            padding: 12px !important;
-            box-sizing: border-box !important;
+            vertical-align: top !important;
         }
 
         /* --- Tour Detail Page --- */
